include/El/blas_like/level1.h

/* Nrm2
   ==== */
EL_EXPORT ElError ElNrm2_s( ElConstMatrix_s A, float* norm );
EL_EXPORT ElError ElNrm2_d( ElConstMatrix_d A, double* norm );
EL_EXPORT ElError ElNrm2_c( ElConstMatrix_c A, float* norm );
EL_EXPORT ElError ElNrm2_z( ElConstMatrix_z A, double* norm );
EL_EXPORT ElError ElNrm2Dist_s( ElConstDistMatrix_s A, float* norm );
EL_EXPORT ElError ElNrm2Dist_d( ElConstDistMatrix_d A, double* norm );
EL_EXPORT ElError ElNrm2Dist_c( ElConstDistMatrix_c A, float* norm );
EL_EXPORT ElError ElNrm2Dist_z( ElConstDistMatrix_z A, double* norm );
EL_EXPORT ElError ElNrm2DistMultiVec_s( ElConstDistMultiVec_s A, float* norm );
EL_EXPORT ElError ElNrm2DistMultiVec_d( ElConstDistMultiVec_d A, double* norm );
EL_EXPORT ElError ElNrm2DistMultiVec_c( ElConstDistMultiVec_c A, float* norm );
EL_EXPORT ElError ElNrm2DistMultiVec_z( ElConstDistMultiVec_z A, double* norm );
/* TODO: Sparse versions */

/* Reshape
   ======= */
EL_EXPORT ElError ElReshape_i
( ElInt m, ElInt n, ElConstMatrix_i A, ElMatrix_i B );
EL_EXPORT ElError ElReshape_s
( ElInt m, ElInt n, ElConstMatrix_s A, ElMatrix_s B );
EL_EXPORT ElError ElReshape_d
( ElInt m, ElInt n, ElConstMatrix_d A, ElMatrix_d B );
EL_EXPORT ElError ElReshape_c
( ElInt m, ElInt n, ElConstMatrix_c A, ElMatrix_c B );
EL_EXPORT ElError ElReshape_z
( ElInt m, ElInt n, ElConstMatrix_z A, ElMatrix_z B );
EL_EXPORT ElError ElReshapeDist_i
( ElInt m, ElInt n, ElConstDistMatrix_i A, ElDistMatrix_i B );
EL_EXPORT ElError ElReshapeDist_s
( ElInt m, ElInt n, ElConstDistMatrix_s A, ElDistMatrix_s B );
EL_EXPORT ElError ElReshapeDist_d
( ElInt m, ElInt n, ElConstDistMatrix_d A, ElDistMatrix_d B );
EL_EXPORT ElError ElReshapeDist_c
( ElInt m, ElInt n, ElConstDistMatrix_c A, ElDistMatrix_c B );
EL_EXPORT ElError ElReshapeDist_z
( ElInt m, ElInt n, ElConstDistMatrix_z A, ElDistMatrix_z B );
EL_EXPORT ElError ElReshapeSparse_i
( ElInt m, ElInt n, ElConstSparseMatrix_i A, ElSparseMatrix_i B );
EL_EXPORT ElError ElReshapeSparse_s
( ElInt m, ElInt n, ElConstSparseMatrix_s A, ElSparseMatrix_s B );
EL_EXPORT ElError ElReshapeSparse_d
( ElInt m, ElInt n, ElConstSparseMatrix_d A, ElSparseMatrix_d B );
EL_EXPORT ElError ElReshapeSparse_c
( ElInt m, ElInt n, ElConstSparseMatrix_c A, ElSparseMatrix_c B );
EL_EXPORT ElError ElReshapeSparse_z
( ElInt m, ElInt n, ElConstSparseMatrix_z A, ElSparseMatrix_z B );
EL_EXPORT ElError ElReshapeDistSparse_i
( ElInt m, ElInt n, ElConstDistSparseMatrix_i A, ElDistSparseMatrix_i B );
EL_EXPORT ElError ElReshapeDistSparse_s
( ElInt m, ElInt n, ElConstDistSparseMatrix_s A, ElDistSparseMatrix_s B );
EL_EXPORT ElError ElReshapeDistSparse_d
( ElInt m, ElInt n, ElConstDistSparseMatrix_d A, ElDistSparseMatrix_d B );
EL_EXPORT ElError ElReshapeDistSparse_c
( ElInt m, ElInt n, ElConstDistSparseMatrix_c A, ElDistSparseMatrix_c B );
EL_EXPORT ElError ElReshapeDistSparse_z
( ElInt m, ElInt n, ElConstDistSparseMatrix_z A, ElDistSparseMatrix_z B );
/* Scale
   ===== */
EL_EXPORT ElError ElScale_i( ElInt alpha, ElMatrix_i A );
EL_EXPORT ElError ElScale_s( float alpha, ElMatrix_s A );
EL_EXPORT ElError ElScale_d( double alpha, ElMatrix_d A );
EL_EXPORT ElError ElScale_c( complex_float alpha, ElMatrix_c A );
EL_EXPORT ElError ElScale_z( complex_double alpha, ElMatrix_z A );
EL_EXPORT ElError ElScaleDist_i( ElInt alpha, ElDistMatrix_i A );
EL_EXPORT ElError ElScaleDist_s( float alpha, ElDistMatrix_s A );
EL_EXPORT ElError ElScaleDist_d( double alpha, ElDistMatrix_d A );
EL_EXPORT ElError ElScaleDist_c( complex_float alpha, ElDistMatrix_c A );
EL_EXPORT ElError ElScaleDist_z( complex_double alpha, ElDistMatrix_z A );
EL_EXPORT ElError ElScaleSparse_i( ElInt alpha, ElSparseMatrix_i A );
EL_EXPORT ElError ElScaleSparse_s( float alpha, ElSparseMatrix_s A );
EL_EXPORT ElError ElScaleSparse_d( double alpha, ElSparseMatrix_d A );
EL_EXPORT ElError ElScaleSparse_c( complex_float alpha, ElSparseMatrix_c A );
EL_EXPORT ElError ElScaleSparse_z( complex_double alpha, ElSparseMatrix_z A );
EL_EXPORT ElError ElScaleDistSparse_i
( ElInt alpha, ElDistSparseMatrix_i A );
EL_EXPORT ElError ElScaleDistSparse_s
( float alpha, ElDistSparseMatrix_s A );
EL_EXPORT ElError ElScaleDistSparse_d
( double alpha, ElDistSparseMatrix_d A );
EL_EXPORT ElError ElScaleDistSparse_c
( complex_float alpha, ElDistSparseMatrix_c A );
EL_EXPORT ElError ElScaleDistSparse_z
( complex_double alpha, ElDistSparseMatrix_z A );
EL_EXPORT ElError ElScaleDistMultiVec_i
( ElInt alpha, ElDistMultiVec_i A );
EL_EXPORT ElError ElScaleDistMultiVec_s
( float alpha, ElDistMultiVec_s A );
EL_EXPORT ElError ElScaleDistMultiVec_d
( double alpha, ElDistMultiVec_d A );
EL_EXPORT ElError ElScaleDistMultiVec_c
( complex_float alpha, ElDistMultiVec_c A );
EL_EXPORT ElError ElScaleDistMultiVec_z
( complex_double alpha, ElDistMultiVec_z A );
/* ScaleTrapezoid
   ============== */
EL_EXPORT ElError ElScaleTrapezoid_i
( ElInt alpha, ElUpperOrLower uplo, ElMatrix_i A, ElInt offset );
EL_EXPORT ElError ElScaleTrapezoid_s
( float alpha, ElUpperOrLower uplo, ElMatrix_s A, ElInt offset );
EL_EXPORT ElError ElScaleTrapezoid_d
( double alpha, ElUpperOrLower uplo, ElMatrix_d A, ElInt offset );
EL_EXPORT ElError ElScaleTrapezoid_c
( complex_float alpha, ElUpperOrLower uplo, ElMatrix_c A, ElInt offset );
EL_EXPORT ElError ElScaleTrapezoid_z
( complex_double alpha, ElUpperOrLower uplo, ElMatrix_z A, ElInt offset );
EL_EXPORT ElError ElScaleTrapezoidDist_i
( ElInt alpha, ElUpperOrLower uplo, ElDistMatrix_i A, ElInt offset );
EL_EXPORT ElError ElScaleTrapezoidDist_s
( float alpha, ElUpperOrLower uplo, ElDistMatrix_s A, ElInt offset );
EL_EXPORT ElError ElScaleTrapezoidDist_d
( double alpha, ElUpperOrLower uplo, ElDistMatrix_d A, ElInt offset );
EL_EXPORT ElError ElScaleTrapezoidDist_c
( complex_float alpha, ElUpperOrLower uplo, ElDistMatrix_c A, ElInt offset );
EL_EXPORT ElError ElScaleTrapezoidDist_z
( complex_double alpha, ElUpperOrLower uplo, ElDistMatrix_z A, ElInt offset );
EL_EXPORT ElError ElScaleTrapezoidSparse_i
( ElInt alpha, ElUpperOrLower uplo, ElSparseMatrix_i A, ElInt offset );
EL_EXPORT ElError ElScaleTrapezoidSparse_s
( float alpha, ElUpperOrLower uplo, ElSparseMatrix_s A, ElInt offset );
EL_EXPORT ElError ElScaleTrapezoidSparse_d
( double alpha, ElUpperOrLower uplo, ElSparseMatrix_d A, ElInt offset );
EL_EXPORT ElError ElScaleTrapezoidSparse_c
( complex_float alpha, ElUpperOrLower uplo, ElSparseMatrix_c A, ElInt offset );
EL_EXPORT ElError ElScaleTrapezoidSparse_z
( complex_double alpha, ElUpperOrLower uplo, ElSparseMatrix_z A, ElInt offset );