python/blas_like/level1.py


# Nrm2
# ----
lib.ElNrm2_s.argtypes = [c_void_p,POINTER(sType)]
lib.ElNrm2_d.argtypes = [c_void_p,POINTER(dType)]
lib.ElNrm2_c.argtypes = [c_void_p,POINTER(sType)]
lib.ElNrm2_z.argtypes = [c_void_p,POINTER(dType)]
lib.ElNrm2Dist_s.argtypes = [c_void_p,POINTER(sType)]
lib.ElNrm2Dist_d.argtypes = [c_void_p,POINTER(dType)]
lib.ElNrm2Dist_c.argtypes = [c_void_p,POINTER(sType)]
lib.ElNrm2Dist_z.argtypes = [c_void_p,POINTER(dType)]
lib.ElNrm2DistMultiVec_s.argtypes = [c_void_p,POINTER(sType)]
lib.ElNrm2DistMultiVec_d.argtypes = [c_void_p,POINTER(dType)]
lib.ElNrm2DistMultiVec_c.argtypes = [c_void_p,POINTER(sType)]
lib.ElNrm2DistMultiVec_z.argtypes = [c_void_p,POINTER(dType)]

def Nrm2(A):
  gamma = TagToType(Base(A.tag))()
  args = [A.obj,pointer(gamma)]
  if type(A) is Matrix:
    if   A.tag == sTag: lib.ElNrm2_s(*args)
    elif A.tag == dTag: lib.ElNrm2_d(*args)
    elif A.tag == cTag: lib.ElNrm2_c(*args)
    elif A.tag == zTag: lib.ElNrm2_z(*args)
    else: DataExcept()
  elif type(A) is DistMatrix:
    if   A.tag == sTag: lib.ElNrm2Dist_s(*args)
    elif A.tag == dTag: lib.ElNrm2Dist_d(*args)
    elif A.tag == cTag: lib.ElNrm2Dist_c(*args)
    elif A.tag == zTag: lib.ElNrm2Dist_z(*args)
    else: DataExcept()
  elif type(A) is DistMultiVec:
    if   A.tag == sTag: lib.ElNrm2DistMultiVec_s(*args)
    elif A.tag == dTag: lib.ElNrm2DistMultiVec_d(*args)
    elif A.tag == cTag: lib.ElNrm2DistMultiVec_c(*args)
    elif A.tag == zTag: lib.ElNrm2DistMultiVec_z(*args)
    else: DataExcept()
  else: TypeExcept()
  return gamma.value

# Reshape
# -------
lib.ElReshape_i.argtypes = \
lib.ElReshape_s.argtypes = \
lib.ElReshape_d.argtypes = \
lib.ElReshape_c.argtypes = \
lib.ElReshape_z.argtypes = \
lib.ElReshapeDist_i.argtypes = \
lib.ElReshapeDist_s.argtypes = \
lib.ElReshapeDist_d.argtypes = \
lib.ElReshapeDist_c.argtypes = \
lib.ElReshapeDist_z.argtypes = \
lib.ElReshapeSparse_i.argtypes = \
lib.ElReshapeSparse_s.argtypes = \
lib.ElReshapeSparse_d.argtypes = \
lib.ElReshapeSparse_c.argtypes = \
lib.ElReshapeSparse_z.argtypes = \
lib.ElReshapeDistSparse_i.argtypes = \
lib.ElReshapeDistSparse_s.argtypes = \
lib.ElReshapeDistSparse_d.argtypes = \
lib.ElReshapeDistSparse_c.argtypes = \
lib.ElReshapeDistSparse_z.argtypes = \
  [iType,iType,c_void_p,c_void_p]

def Reshape(m,n,A):
  if type(A) is Matrix:
    B = Matrix(A.tag)
    args = [m,n,A.obj,B.obj]
    if   A.tag == iTag: lib.ElReshape_i(*args)
    elif A.tag == sTag: lib.ElReshape_s(*args)
    elif A.tag == dTag: lib.ElReshape_d(*args)
    elif A.tag == cTag: lib.ElReshape_c(*args)
    elif A.tag == zTag: lib.ElReshape_z(*args)
    else: DataExcept()
    return B
  elif type(A) is DistMatrix:
    B = DistMatrix(A.tag,MC,MR,A.Grid())
    args = [m,n,A.obj,B.obj]
    if   A.tag == iTag: lib.ElReshapeDist_i(*args)
    elif A.tag == sTag: lib.ElReshapeDist_s(*args)
    elif A.tag == dTag: lib.ElReshapeDist_d(*args)
    elif A.tag == cTag: lib.ElReshapeDist_c(*args)
    elif A.tag == zTag: lib.ElReshapeDist_z(*args)
    else: DataExcept()
    return B
  elif type(A) is SparseMatrix:
    B = SparseMatrix(A.tag)
    args = [m,n,A.obj,B.obj]
    if   A.tag == iTag: lib.ElReshapeSparse_i(*args)
    elif A.tag == sTag: lib.ElReshapeSparse_s(*args)
    elif A.tag == dTag: lib.ElReshapeSparse_d(*args)
    elif A.tag == cTag: lib.ElReshapeSparse_c(*args)
    elif A.tag == zTag: lib.ElReshapeSparse_z(*args)
    else: DataExcept()
    return B
  elif type(A) is DistSparseMatrix:
    B = DistSparseMatrix(A.tag,A.Grid())
    args = [m,n,A.obj,B.obj]
    if   A.tag == iTag: lib.ElReshapeDistSparse_i(*args)
    elif A.tag == sTag: lib.ElReshapeDistSparse_s(*args)
    elif A.tag == dTag: lib.ElReshapeDistSparse_d(*args)
    elif A.tag == cTag: lib.ElReshapeDistSparse_c(*args)
    elif A.tag == zTag: lib.ElReshapeDistSparse_z(*args)
    else: DataExcept()
    return B
  else:
    TypeExcept()

# Round
# -----
lib.ElRound_i.argtypes = \
lib.ElRound_s.argtypes = \
lib.ElRound_d.argtypes = \
lib.ElRound_c.argtypes = \
lib.ElRound_z.argtypes = \
lib.ElRoundDist_i.argtypes = \
lib.ElRoundDist_s.argtypes = \
lib.ElRoundDist_d.argtypes = \
lib.ElRoundDist_c.argtypes = \
lib.ElRoundDist_z.argtypes = \
lib.ElRoundDistMultiVec_i.argtypes = \
lib.ElRoundDistMultiVec_s.argtypes = \
lib.ElRoundDistMultiVec_d.argtypes = \
lib.ElRoundDistMultiVec_c.argtypes = \
lib.ElRoundDistMultiVec_z.argtypes = \
  [c_void_p]

def Round(A):
  args = [A.obj]
  if type(A) is Matrix:
    if   A.tag == iTag: lib.ElRound_i(*args)
    elif A.tag == sTag: lib.ElRound_s(*args)
    elif A.tag == dTag: lib.ElRound_d(*args)
    elif A.tag == cTag: lib.ElRound_c(*args)
    elif A.tag == zTag: lib.ElRound_z(*args)
    else: DataExcept()
  elif type(A) is DistMatrix:
    if   A.tag == iTag: lib.ElRoundDist_i(*args)
    elif A.tag == sTag: lib.ElRoundDist_s(*args)
    elif A.tag == dTag: lib.ElRoundDist_d(*args)
    elif A.tag == cTag: lib.ElRoundDist_c(*args)
    elif A.tag == zTag: lib.ElRoundDist_z(*args)
    else: DataExcept()
  elif type(A) is DistMultiVec:
    if   A.tag == iTag: lib.ElRoundDistMultiVec_i(*args)
    elif A.tag == sTag: lib.ElRoundDistMultiVec_s(*args)
    elif A.tag == dTag: lib.ElRoundDistMultiVec_d(*args)
    elif A.tag == cTag: lib.ElRoundDistMultiVec_c(*args)
    elif A.tag == zTag: lib.ElRoundDistMultiVec_z(*args)
    else: DataExcept()
  else: TypeExcept()

# Scale
# -----
lib.ElScale_i.argtypes = [iType,c_void_p]
lib.ElScale_s.argtypes = [sType,c_void_p]
lib.ElScale_d.argtypes = [dType,c_void_p]
lib.ElScale_c.argtypes = [cType,c_void_p]
lib.ElScale_z.argtypes = [zType,c_void_p]
lib.ElScaleDist_i.argtypes = [iType,c_void_p]
lib.ElScaleDist_s.argtypes = [sType,c_void_p]
lib.ElScaleDist_d.argtypes = [dType,c_void_p]
lib.ElScaleDist_c.argtypes = [cType,c_void_p]
lib.ElScaleDist_z.argtypes = [zType,c_void_p]
lib.ElScaleSparse_i.argtypes = [iType,c_void_p]
lib.ElScaleSparse_s.argtypes = [sType,c_void_p]
lib.ElScaleSparse_d.argtypes = [dType,c_void_p]
lib.ElScaleSparse_c.argtypes = [cType,c_void_p]
lib.ElScaleSparse_z.argtypes = [zType,c_void_p]
lib.ElScaleDistSparse_i.argtypes = [iType,c_void_p]
lib.ElScaleDistSparse_s.argtypes = [sType,c_void_p]
lib.ElScaleDistSparse_d.argtypes = [dType,c_void_p]
lib.ElScaleDistSparse_c.argtypes = [cType,c_void_p]
lib.ElScaleDistSparse_z.argtypes = [zType,c_void_p]
lib.ElScaleDistMultiVec_i.argtypes = [iType,c_void_p]
lib.ElScaleDistMultiVec_s.argtypes = [sType,c_void_p]
lib.ElScaleDistMultiVec_d.argtypes = [dType,c_void_p]
lib.ElScaleDistMultiVec_c.argtypes = [cType,c_void_p]
lib.ElScaleDistMultiVec_z.argtypes = [zType,c_void_p]
def Scale(alphaPre,A):
  alpha = TagToType(A.tag)(alphaPre)
  args = [alpha,A.obj]
  if type(A) is Matrix:
    if   A.tag == iTag: lib.ElScale_i(*args)
    elif A.tag == sTag: lib.ElScale_s(*args)
    elif A.tag == dTag: lib.ElScale_d(*args)
    elif A.tag == cTag: lib.ElScale_c(*args)
    elif A.tag == zTag: lib.ElScale_z(*args)
    else: DataExcept()
  elif type(A) is DistMatrix:
    if   A.tag == iTag: lib.ElScaleDist_i(*args)
    elif A.tag == sTag: lib.ElScaleDist_s(*args)
    elif A.tag == dTag: lib.ElScaleDist_d(*args)
    elif A.tag == cTag: lib.ElScaleDist_c(*args)
    elif A.tag == zTag: lib.ElScaleDist_z(*args)
    else: DataExcept()
  elif type(A) is SparseMatrix:
    if   A.tag == iTag: lib.ElScaleSparse_i(*args)
    elif A.tag == sTag: lib.ElScaleSparse_s(*args)
    elif A.tag == dTag: lib.ElScaleSparse_d(*args)
    elif A.tag == cTag: lib.ElScaleSparse_c(*args)
    elif A.tag == zTag: lib.ElScaleSparse_z(*args)
    else: DataExcept()
  elif type(A) is DistSparseMatrix:
    if   A.tag == iTag: lib.ElScaleDistSparse_i(*args)
    elif A.tag == sTag: lib.ElScaleDistSparse_s(*args)
    elif A.tag == dTag: lib.ElScaleDistSparse_d(*args)
    elif A.tag == cTag: lib.ElScaleDistSparse_c(*args)
    elif A.tag == zTag: lib.ElScaleDistSparse_z(*args)
    else: DataExcept()
  elif type(A) is DistMultiVec:
    if   A.tag == iTag: lib.ElScaleDistMultiVec_i(*args)
    elif A.tag == sTag: lib.ElScaleDistMultiVec_s(*args)
    elif A.tag == dTag: lib.ElScaleDistMultiVec_d(*args)
    elif A.tag == cTag: lib.ElScaleDistMultiVec_c(*args)
    elif A.tag == zTag: lib.ElScaleDistMultiVec_z(*args)
    else: DataExcept()
  else: TypeExcept()

# Scale trapezoid
# ---------------
lib.ElScaleTrapezoid_i.argtypes = [iType,c_uint,c_void_p,iType]
lib.ElScaleTrapezoid_s.argtypes = [sType,c_uint,c_void_p,iType]
lib.ElScaleTrapezoid_d.argtypes = [dType,c_uint,c_void_p,iType]
lib.ElScaleTrapezoid_c.argtypes = [cType,c_uint,c_void_p,iType]
lib.ElScaleTrapezoid_z.argtypes = [zType,c_uint,c_void_p,iType]
lib.ElScaleTrapezoidDist_i.argtypes = [iType,c_uint,c_void_p,iType]
lib.ElScaleTrapezoidDist_s.argtypes = [sType,c_uint,c_void_p,iType]
lib.ElScaleTrapezoidDist_d.argtypes = [dType,c_uint,c_void_p,iType]
lib.ElScaleTrapezoidDist_c.argtypes = [cType,c_uint,c_void_p,iType]
lib.ElScaleTrapezoidDist_z.argtypes = [zType,c_uint,c_void_p,iType]
lib.ElScaleTrapezoidSparse_i.argtypes = [iType,c_uint,c_void_p,iType]
lib.ElScaleTrapezoidSparse_s.argtypes = [sType,c_uint,c_void_p,iType]
lib.ElScaleTrapezoidSparse_d.argtypes = [dType,c_uint,c_void_p,iType]
lib.ElScaleTrapezoidSparse_c.argtypes = [cType,c_uint,c_void_p,iType]
lib.ElScaleTrapezoidSparse_z.argtypes = [zType,c_uint,c_void_p,iType]
lib.ElScaleTrapezoidDistSparse_i.argtypes = [iType,c_uint,c_void_p,iType]
lib.ElScaleTrapezoidDistSparse_s.argtypes = [sType,c_uint,c_void_p,iType]
lib.ElScaleTrapezoidDistSparse_d.argtypes = [dType,c_uint,c_void_p,iType]
lib.ElScaleTrapezoidDistSparse_c.argtypes = [cType,c_uint,c_void_p,iType]
lib.ElScaleTrapezoidDistSparse_z.argtypes = [zType,c_uint,c_void_p,iType]
def ScaleTrapezoid(alphaPre,uplo,A,offset=0):
  alpha = TagToType(A.tag)(alphaPre)
  args = [alpha,uplo,A.obj,offset]
  if type(A) is Matrix:
    if   A.tag == iTag: lib.ElScaleTrapezoid_i(*args)
    elif A.tag == sTag: lib.ElScaleTrapezoid_s(*args)
    elif A.tag == dTag: lib.ElScaleTrapezoid_d(*args)
    elif A.tag == cTag: lib.ElScaleTrapezoid_c(*args)
    elif A.tag == zTag: lib.ElScaleTrapezoid_z(*args)
    else: DataExcept()
  elif type(A) is DistMatrix:
    if   A.tag == iTag: lib.ElScaleTrapezoidDist_i(*args)
    elif A.tag == sTag: lib.ElScaleTrapezoidDist_s(*args)
    elif A.tag == dTag: lib.ElScaleTrapezoidDist_d(*args)
    elif A.tag == cTag: lib.ElScaleTrapezoidDist_c(*args)
    elif A.tag == zTag: lib.ElScaleTrapezoidDist_z(*args)
    else: DataExcept()
  elif type(A) is SparseMatrix:
    if   A.tag == iTag: lib.ElScaleTrapezoidSparse_i(*args)
    elif A.tag == sTag: lib.ElScaleTrapezoidSparse_s(*args)
    elif A.tag == dTag: lib.ElScaleTrapezoidSparse_d(*args)
    elif A.tag == cTag: lib.ElScaleTrapezoidSparse_c(*args)
    elif A.tag == zTag: lib.ElScaleTrapezoidSparse_z(*args)
    else: DataExcept()
  elif type(A) is DistSparseMatrix:
    if   A.tag == iTag: lib.ElScaleTrapezoidDistSparse_i(*args)
    elif A.tag == sTag: lib.ElScaleTrapezoidDistSparse_s(*args)
    elif A.tag == dTag: lib.ElScaleTrapezoidDistSparse_d(*args)
    elif A.tag == cTag: lib.ElScaleTrapezoidDistSparse_c(*args)
    elif A.tag == zTag: lib.ElScaleTrapezoidDistSparse_z(*args)
    else: DataExcept()
  else: TypeExcept()

# Set diagonal
# ------------
# TODO
